css/style.css
:root{
    --my-system-ui:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

 /* navbar_start  */

 .bg-body-tertiary {
    opacity: 92%;
    background-color: #040404 !important;
}
.navbar{
    top: -1;
}
.navbar-brand {
    color: #fff;
    font-size: 28px;
    font-weight: 600;
}
.navbar-brand:hover{
    color: #fff;
}
.nav-link:active,
.nav-link:focus{
    color: #fff !important;
}
.nav-link{
    color: #fff;
    margin-right: 1rem;
    font-size: 16px;
    font-weight: 600;
}
.nav-link:hover{
    color: #fff;
}
.nav-hover-1:after{
    content: "";
    width: 0;
    height: 2px;
    background-color: #fff;
    position: absolute;
    bottom: 5px;
    left: 9.5px;
    transition: all 0.3s;
}
.nav-hover-1:hover:after{
    width: 2.2rem;
}
.nav-hover-2:after{
    content: "";
    width: 0;
    height: 2px;
    background-color: #fff;
    position: absolute;
    bottom: 5px;
    left: 9.5px;
    transition: all 0.3s;
}
.nav-hover-2:hover:after{
    width: 2.5rem;
}
.nav-hover-3:after{
    content: "";
    width: 0;
    height: 2px;
    background-color: #fff;
    position: absolute;
    bottom: 5px;
    left: 9.5px;
    transition: all 0.3s;
}
.nav-hover-3:hover:after{
    width: 3.7rem !important;
}
.nav-hover-4:after{
    content: "";
    width: 0;
    height: 2px;
    background-color: #fff;
    position: absolute;
    bottom: 5px;
    left: 9.5px;
    transition: all 0.3s;
}
.nav-hover-4:hover:after{
    width: 2.2rem;
}
.nav-hover-5:after{
    content: "";
    width: 0;
    height: 2px;
    background-color: #fff;
    position: absolute;
    bottom: 5px;
    left: 9.5px;
    transition: all 0.3s;
}
.nav-hover-5:hover:after{
    width: 1.8rem;
}
.nav-hover-6:after{
    content: "";
    width: 0;
    height: 2px;
    background-color: #fff;
    position: absolute;
    bottom: 5px;
    left: 9.5px;
    transition: all 0.3s;
}
.nav-hover-6:hover:after{
    width: 3.7rem;
}
.dropdown-menu .dropdown-menu{
    display: none !important;
}
.dropdown:hover > .dropdown-menu {
    display: block !important;
}
.drobdown-submenu{
    position: relative;
}
.drobdown-submenu:hover > .dropdown-menu{
    display: block !important;
    top: 0;
    left: 100%;
    margin-top: -6px;
    margin-left: -1px;
}
.hero-button{
    background-color: transparent;
    color: #fff;
    border-color: transparent;
    font-size: 17px;
    font-weight: 600;
}
.drob-down-hover{
    font-size: 14px;
    font-weight: 600;
    color: #4e4e4e;
}
.drob-down-hover:hover{
    color: #0078FF;
}
.navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
    color: #0062d3 !important;
}
.navbar-toggler{
    border-color: transparent ;
}

/* navbar_end */
/* hero_section_start */

.hero-section{
    height: 100vh;
    background-image: url(../images/hero-bg.jpg);
    background-size: cover;
    background-position: center center;
    background-attachment: fixed;
}
.hero-section .container .hero-content h1{
    font-size: 72px;
    font-family: var(--my-system-ui);
    font-weight: 600;
}
.hero-section .container .hero-content h4{
    font-family: var(--my-system-ui);
    font-size: 40px;
    font-weight: 600;
}

/* hero_section_end */
/* about_section_start */

.about-section{
    overflow: auto;
    background-color: #F4F4F4;
}
.about-section .container{
    box-shadow: 5px 5px 10px #C3C3C3;
}
.progress{
    --bs-progress-height: 0.75rem;
    background-color: #CDE1F8;
     border-radius: 0;
     padding: 0;
}
.mt-6{
    margin: 5% auto;
}
.about-section .container .details .npep p{
    font-family: var(--my-system-ui);
    color: #4e4e4e;
}
.about-section .container .details .npep p span{
    color: #1e1e1e;
    font-size: 18px;
    font-weight: 600;
}
.about-section .container .details .skill .fd{
    color: #4e4e4e;
    font-family: var(--my-system-ui);
}
.about-section .container .details .skill h4{
    color: #1e1e1e;
    font-size: 18px;
    font-weight: 600;
}
.about-section .container .caption h2{
    font-family: var(--my-system-ui);
    font-size: 32px;
    font-weight: 500;
    color: #1e1e1e;
    position: relative;
}
.about-section .container .caption h2::before{
    content: "";
    background-color: #0078FF;
    width: 6.5rem;
    height: 4px;
    position: absolute;
    top: 48px;
    left: 0;
}

/* about_section_end */
/* Services_section_start */

.Services-section{
    background-color: #F4F4F4;
}
.services-hero{
    color: #1e1e1e;
    font-family: var(--my-system-ui);
    font-weight: 700;
    font-size: 48px;
}
.services-hand{
    color: #4e4e4e;
    font-family: var(--my-system-ui);
    font-size: 16px;
    font-weight: 400;
}
 main .Services-section .services-head .services-hand::before{
    content: "";
    background-color: #0078FF;
    width: 2.5rem;
    height: 4px;
    position: absolute;
    top: 38;
    left: 50%;
    transform: translateX(-50%);
}
.icon-name{
    color: #1e1e1e;
    font-family: var(--my-system-ui);
    font-size: 22px;
    font-weight: 500;
}
.services-icons{
    color: #1e1e1e;
    font-size: 40px;
    font-weight: 400;
}
.box-shadow{
    box-shadow: 3px 3px 5px #C3C3C3;
}
.services-icons i{
    border: #0078FF 10px solid;
    padding: 22px 28px;
    border-radius: 50%;
    transition: all 0.5s;
}
.body-card:hover i{
    background-color: #0078FF;
    border-color: #cde1f8;
    color: #fff;
}

/* Services_section_end */
/* statistics_section_start */

.statistics-section{
    background-image: url(../images/counters-bg.jpg);
    background-size: cover;
    background-position: center center;
    background-attachment: fixed;
    height: 60vh;

}
.statistics-section .my-bg{
    background-color: #0078FF;
}
.statistics-icon{
    color: #cde1f8;
    font-size: 32px;
}
.statistics-icon i{
    border: 10px solid #cde1f8;
    padding: 10px 15px;
    border-radius: 50%;
}
.statistics-num{
    color: #fff;
    font-size: 32px;
}
.statistics-text{
    color: #fff;
    font-size: 16px;
}

/* statistics_section_end */
/* Portfolio_section_start */

.portfolio-section{
    background-color: #F4F4F4;
    padding-top: 6%;
    padding-bottom: 4%;
}
.portfolio-section-head h2{
    font-family: var(--my-system-ui);
    color: #1e1e1e;
    font-size: 48px;
    font-weight: 700;
}
.portfolio-section-head p{
    font-family: var(--my-system-ui);
    color: #4e4e4e; 
}
main .portfolio-section .container .portfolio-section-head p::after{
    content: "";
    background-color: #0078FF;
    width: 2.5rem;
    height: 4px;
    position: absolute;
    top: 40px;
    left: 50%;
    transform: translateX(-50%);
}
.img-head{
    font-family: var(--my-system-ui);
    color: #1e1e1e;
    font-size: 19px;
    font-weight: 500;
}
.img-dis{
    font-family: var(--my-system-ui);
    color: #4e4e4e;
    font-size: 13px;
    font-weight: 400;
}
.portfolio-icon i{
    color: #0078ff;
    font-size: 40px;
    font-weight: 400;
}
.portfolio-images{
    overflow: hidden;
}
.portfolio-images img{
    transition: all 1s;
}
.portfolio-images img:hover{
    transform: scale(1.3);
}

/* Portfolio_section_end */
/* feedback_section_start */

.feedback-section{
    background-image: url(../images/overlay-bg.jpg);
    background-size: cover;
    background-position: center center;
    background-attachment: fixed;
    height: 80vh;
}
.feedback-section-layer{
    background-color: #0078FF;
}
.feedback_section_content{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
}
.feedback_section_content .carousel-inner{
    height: 50vh;
}
.feedback_section_content h4{
    font-family: var(--my-system-ui);
    font-size: 22px;
    font-weight: 600;
}
.feedback_section_content p{
    font-family: var(--my-system-ui);
    font-size: 20px;
    font-weight: 300;
}
.feedback-section .carousel-indicators button{
    width: 12px !important;
    height: 12px !important;
    border-radius: 50%;
}

/* feedback_section_end */
/* blog_section_start */

.blog-section{
    background-color: #F4F4F4;
    padding-top: 5%;
    padding-bottom: 8%;
    box-sizing: border-box;
}
.blog-section-head h2{
    font-family: var(--my-system-ui);
    font-size: 48px;
    font-weight: 700;
    color: #1e1e1e;
}
.blog-section-head p{
    font-family: var(--my-system-ui);
    color: #4e4e4e;
    margin-bottom: 4%;
}
main .blog-section .container .blog-section-head p::after{
    content: "";
    background-color: #0078FF;
    width: 2.5rem;
    height: 4px;
    position: absolute;
    top: 40px;
    left: 50%;
    transform: translateX(-50%);
}
.card-footer .w-d{
    width: 12%;
}
.blog-section .card-group .card h5{
    font-family: var(--my-system-ui);
    color: #1e1e1e;
    font-size: 21px;
    font-weight: 500;
    transition: all 0.5s;
}
.blog-section .card-group .card h5:hover{
    color: #0078ff;
}
.blog-section .card-group .card p{
    font-family: var(--my-system-ui);
    color: #4e4e4e;
}
.blog-section .card-group .card .card-footer a{
    font-family: var(--my-system-ui);
    color: #1e1e1e;
    font-size: 16px;
    font-weight: 400;
    transition: all 0.5s;
}
.blog-section .card-group .card .card-footer a:hover{
    color: #0078FF;
}
.card-caption{
    /* bottom: 11.4rem; */
    top: -14px;
    left: 0;
}
.card-caption .caption-cont.count-1{
    width: 4rem;
}
.card-caption .caption-cont.count-2{
    width: 6rem;
}
.card-caption .caption-cont p{
    font-family: var(--my-system-ui);
    font-size: 11px;
    font-weight: 500;
}

/* blog_section_end */
/* contact_section_start */

.contact-section{
    background-image: url(../images/overlay-bg.jpg);
    background-size: cover;
    background-position: center center;
    background-attachment: fixed;
    height: 100vh;
}
.contact-section .mt-7{
    margin-top: 4% !important;
}
.my-bt{
    background-color: #0078FF;
    border: 3px solid transparent;
    font-size: 19px;
    transition: all 0.3s;
    width: 12rem;
}
.my-bt:hover{
    border: #CDE1F8 3px solid;
}
.contact-section .col h2{
    font-family: var(--my-system-ui);
    color: #1e1e1e;
    font-size: 32px;
    font-weight: 500;
}
.contact-section .col p{
    font-family: var(--my-system-ui);
    color: #4e4e4e;
}
.contact-section p span{
    color: #0078FF !important;
}
.contact-section .last-icons a i{
    color: #1e1e1e;
    font-size: 19px;
    border: #0078FF 3px solid;
    padding: 5px 9px;
    border-radius: 50%;
    transition: all 0.3s;
}
.contact-section .last-icons a i:hover{
    color: #fff;
    background-color: #0078FF;
}
.box-specific-shadow{
    box-shadow: 2px 2px 8px #01244d;
}
.contact-section .contact-first-after::after{
    content: "";
    background-color: #0078FF;
    width: 6.5rem;
    height: 3.5px;
    position: absolute;
    bottom: -8;
    left: 12;
}
main .contact-section .container .contact-second-after::after{
    content: "";
    background-color: #0078FF;
    width: 6.5rem;
    height: 3.5px;
    position: absolute;
    bottom: -8 !important;
    left: 3 !important;
}

/* contact_section_end */
/* copyright_section_start */

.copyright-section{
    background-color: #0062d3;
}
.copyright-section p span{
    font-weight: 700;
}

/* copyright_section_end */

